# 24ducode

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  fly.agent.toml  fly.dash.toml  fly.game.toml  fly.toml  oas-3026-get-started.yaml  package-lock.json  package.json
.claude/skills/: context.md
apps/agent/: Dockerfile  README.md  fly.toml  pyproject.toml
apps/agent/app/: agent.py  config.py  db.py  main.py  memory.py  strategy.py  world.py  ws_client.py
apps/agent/app/agents/: __init__.py  base.py  explorer.py  v1.py  v2.py
apps/api/: Dockerfile  index.ts  package.json  tsconfig.json
apps/api/services/: auth.ts  bot-orders.ts  bot-stats.ts  broker.ts  db.ts  game-api.ts  map-store.ts
apps/api/socket/: index.ts
apps/api/socket/handlers/: auth.ts  bot.ts  map.ts  marketplace.ts  player.ts  ship.ts  storage.ts  tax.ts  theft.ts
apps/api/socket/middleware/: auth.ts
apps/dash/: Dockerfile  fly.toml  package.json
apps/dash/app/: globals.css  layout.tsx  page.tsx
apps/dash/components/: AgentPanel.tsx  BrokerEventsPanel.tsx  LoginForm.tsx  MapPanel.tsx  MarketplacePanel.tsx  PlayerCard.tsx  ShipPanel.tsx  TaxesPanel.tsx  TheftPanel.tsx
apps/dash/hooks/: useSocket.ts
apps/game/: Dockerfile  Dockerfile.prod  index.html  package.json
apps/game/src/: main.ts  style.css
apps/game/src/assets/: map.txt  ship.glb
apps/game/src/map/: IslandMeshBuilder.ts
docs/: deploy.md  oas-3026-full.yaml
docs/api/: broker.md  database.md  websocket.md
scripts/: cells-clean.json  cells-to-import.json  explored-cells.json  started_explore.ts
(+15 files in other folders)
