[project]
name = "game-3026-agent"
version = "0.1.0"
description = "Agent FastAPI – exploration, OR, MongoDB"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "motor>=3.6",
    "pymongo>=4.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "ortools>=9.11",
    "pulp>=2.9",
    "scipy>=1.15",
    "networkx>=3.4",
    # "deap>=1.4",
    # "langchain>=0.3",
    # "langgraph>=0.2",
    # "aio-pika>=9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
